<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_home_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_home_page">


        <LinearLayout
            android:id="@+id/linear6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nav_emri"
                    style="@style/EditTextProfile"
                    android:inputType="textPersonName"
                    android:text="@string/login_emer" />

                <EditText
                    android:id="@+id/nav_mbiemri"
                    style="@style/EditTextProfile"
                    android:inputType="textPersonName"
                    android:text="@string/login_mbiemri" />

                <EditText
                    android:id="@+id/nav_email"
                    style="@style/EditTextProfile"
                    android:inputType="textEmailAddress"
                    android:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/edit"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_circle"
                    android:drawableTop="@drawable/ic_mode_edit_black_24dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/modifiko_profil"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/save"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/button_circle"
                    android:drawableTop="@drawable/ic_check_black_24dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBlack" />


            <LinearLayout
                android:id="@+id/linar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/rreth_nesh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:text="@string/menu_rreth_nesh" />

                <TextView
                    android:id="@+id/kontakt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_kontakt" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_vizite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorYellow"
            android:text="@string/vizite"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/profile_width"
            android:layout_height="@dimen/profile_height"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="110dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle"
            android:scaleType="centerCrop" />

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
