<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:weightSum="4"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.albal.slsproject.Profile"
    tools:ignore="ContentDescription"
    tools:showIn="@layout/app_bar_home_page">

    <ImageView
        android:id="@+id/img_trupi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/trupi" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_sherbime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/ic_local_hospital_black_24dp"
                android:paddingTop="30dp"
                android:text="@string/sherbime"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/analiza"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/ic_local_hospital_black_24dp"
                android:paddingTop="30dp"
                android:text="@string/analiza"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_mjeket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/ic_local_hospital_black_24dp"
                android:paddingTop="30dp"
                android:text="@string/mjeket"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/ic_local_hospital_black_24dp"
                android:paddingTop="30dp"
                android:text="@string/kalendari"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </TableRow>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:text="Emergjence"
        android:textColor="@color/colorWhite" />

</LinearLayout>



